# anime-presenter

./: .flake8  LICENSE  lint.sh  pyproject.toml
src/anime_presenter/: __init__.py  markup.py  navigation.py  pdf_building.py  player.py  presentation.py
src/anime_presenter/cli/: cli.py  common.py
tests/: conftest.py  test_markup.py  test_presentation.py
tests/resources/: positive_case.yaml
